--- a/Auto_MPG.ipynb
+++ b/Auto_MPG.ipynb
@@ -867,18 +867,18 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "# ایجاد ویژگی‌های چندجمله‌ای با استفاده از آموزش و آزمون داده‌ها\n",
+    "# Creating polynomial features using training and testing data\n",
     "poly = PolynomialFeatures(degree=2, include_bias=False)\n",
     "\n",
-    "# تبدیل داده‌های آموزش و آزمون\n",
+    "# Converting training and testing data\n",
     "X_train_poly = poly.fit_transform(x_train)\n",
     "X_test_poly = poly.transform(x_test)\n",
     "\n",
-    "# آموزش مدل با ویژگی‌های چندجمله‌ای\n",
+    "# Training the model with polynomial features\n",
     "model = LinearRegression()\n",
     "model.fit(X_train_poly, y_train)\n",
     "\n",
-    "# پیش‌بینی و ارزیابی\n",
+    "# Prediction and evaluation\n",
     "y_pred = model.predict(X_test_poly)\n",
     "mse_poly = mean_squared_error(y_test, y_pred)\n",
     "r2_poly = r2_score(y_test, y_pred)\n",
@@ -911,11 +911,11 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "# مدل Random Forest\n",
+    "#  Random Forest model\n",
     "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "rf.fit(x_train, y_train)\n",
     "\n",
-    "# پیش‌بینی و ارزیابی\n",
+    "# Prediction and evaluation\n",
     "y_pred_rf = rf.predict(x_test)\n",
     "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
     "r2_rf = r2_score(y_test, y_pred_rf)\n",
@@ -949,13 +949,13 @@
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "# مدل Gradient Boosting\n",
+    "#  Gradient Boosting model\n",
     "gb = GradientBoostingRegressor(n_estimators=100, learning_rate=0.1, max_depth=3, random_state=42)\n",
     "\n",
-    "# آموزش مدل\n",
+    "# Training the model\n",
     "gb.fit(x_train, y_train)\n",
     "\n",
-    "# پیش‌بینی و ارزیابی\n",
+    "# Prediction and evaluation\n",
     "y_pred_gb = gb.predict(x_test)\n",
     "mse_gb = mean_squared_error(y_test, y_pred_gb)\n",
     "r2_gb = r2_score(y_test, y_pred_gb)\n",
